style/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* scrollbar */
/* Pilihan untuk Webkit (Chrome, Safari) */
::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: #a9a9a9;
  border-radius: 3px;
}

::-webkit-scrollbar-track {
  background-color: #f1f1f1;
}

body {
  font-family: "poppins", sans-serif;
  width: 100%;
  height: fit-content;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

p {
  line-height: 1.5;
}

/* navbar */
nav {
  width: 100vw;
  height: fit-content;
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: fixed;
  z-index: 1000;
  background: linear-gradient(to right, #665c5c31, #5a5a5a79);
  color: white;
  padding: 20px 0px;
  /* position: relative; */
}

.logo {
  display: flex;
  align-items: center;
  width: 50%;
}

nav ul {
  list-style: none;
  display: flex;
  width: 40%;
  justify-content: space-between;
}

nav ul li a {
  text-decoration: none;
  color: inherit;
}

a {
  text-decoration: none;
  color: inherit;
  transition: 0.5s;
}

a:hover {
  color: #0015ff;
}

nav .logo img {
  width: 50px;
  margin-right: 12px;
}

nav button {
  display: none;
}

nav button:hover {
  color: #999;
}

main {
  width: 100%;
  height: max-content;
  margin: 0px;
  padding: 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* overflow: hidden; */
}
section {
  width: 100%;
  height: 100vh;
  /* margin: 50px 0px; */
}

.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: fit-content;
  border-radius: 20px;
  scroll-behavior: smooth;
}

section.hero {
  background: linear-gradient(to bottom, #170516 40%, #000758 100%);
}

.hero {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.profile {
  margin: 0px 20px;
  width: auto;
  height: auto;
  color: white;
}

.profile p {
  font-size: 32px;
  margin-bottom: 12px;
}

@keyframes fontLightsUp {
  0% {
    text-shadow: none;
  }
  25% {
    text-shadow: 0px 0px 25px #000758;
  }
  50% {
    text-shadow: 0px 0px 25px #0015ff;
  }
  75% {
    text-shadow: 0px 0px 25px #000758;
  }
  100% {
    text-shadow: none;
  }
}

.profile h1 {
  font-size: 52px;
  font-weight: bold;
  color: #6e015f00;
  -webkit-text-stroke: 3px #0015ff;
  text-shadow: 0px 0px 25px #0015ff;
  animation: fontLightsUp 4s infinite;
  margin-top: -20px;
}

.profile a {
  border: 2px solid #0015ff;
  padding: 10px;
  margin-top: 200px;
  border-radius: 5px;
}

.profile a:hover {
  background-color: #0015ff;
  box-shadow: 0px 0px 25px #0015ff;
  color: white;
}

.img-profile {
  overflow: hidden;
  border: 6px solid;
  border-color: #0015ff;
  border-radius: 5%;
  box-shadow: inset 0px 0px 50px #0015ff;
  margin: 20px 20px;
}

.img-profile img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* about me */
section.about-me {
  background: linear-gradient(to bottom, #000758 40%, #0015ff 90%);
  display: flex;
  align-items: center;
  /* height: 100vh; */
}

.about-me .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 0px;
  padding: 20px;
  text-align: center;
  color: white;
}

.heading-section {
  margin-top: 0px;
  margin-bottom: 20px;
  font-size: 64px;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-weight: bold;
  color: #7d187800;
  -webkit-text-stroke: 2px #0015ff;
  text-shadow: 0px 0px 30px #0015ff;
}

.about p {
  font-size: 20px;
}

/* skills */
section.skills {
  background: linear-gradient(to bottom, #0015ff 0%, #000758 20%, #00053b 50%);
  display: flex;
  align-content: center;
}

section.skills .container {
  width: 100%;
}

.skill-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  align-content: center;
  gap: 40px;
}

.skill {
  border: 5px solid #0015ff;
  border-radius: 10px;
  padding: 20px;
}

.skill img {
  width: 120px;
}

section.skills .container,
section.projects .container {
  flex-direction: column;
}

.list-box {
  display: flex;
  flex-direction: row;
}

/* projects */
section.projects {
  text-align: center;
  background: linear-gradient(to bottom, #00053b 20%, #170516 90%);
  display: flex;
  /* flex-direction: column; */
  align-items: center;
}

.carousel-container {
  width: 100%;
  /* overflow: hidden;    */
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.next-btn,
.prev-btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 10px;
  color: white;
  background-color: #a0a0a0;
  cursor: pointer;
  border: non;
}

.next-btn {
  right: 15px;
}

.prev-btn {
  left: 15px;
}

.carousel-slide {
  width: 100%;
  /* height: 70%; */
  /* display: none; */
}

.carousel-item {
  flex: 0 0 100%; /* Set the width of each slide */
  box-sizing: border-box;
  padding: 20px;
  text-align: center;
  box-shadow: inset 0px 0px 1000px #0015ff;
  margin: 12px 60px;
  border-radius: 10px;
  transition: opacity 1s ease-in-out;
}

.carousel-item.active {
  display: block;
  opacity: 1;
}

.carousel-item.inactive {
  display: none;
  opacity: 0;
}

.projects-box {
  display: flex;
  flex-direction: row;
  padding: 20px;
  gap: 3rem;
  color: #fff;
}

.project-img {
  width: 450px;
  height: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-img img {
  width: 300px;
  object-fit: cover;
}

.project-desc {
  text-align: left;
  margin: 0px 12px;
}

.project-desc h2 {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  margin-bottom: 3px;
}

.project-desc h1 {
  margin-bottom: 15px;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-size: 40px;
  color: #fff;
  text-shadow: 0px 0px 25px #ff0072;
}

.view-project {
  border-radius: 5px;
  padding: 5px;
  background-color: #d0005e;
}

.view-project:hover {
  /* transform: scale(1.5); */
  color: #ffffff;
  box-shadow: 0px 0px 10px #ff0072;
}
.project-desc p {
  margin-top: 15px;
  font-size: 20px;
}

/* contacts */
section.contacts {
  width: 100%;
  background: linear-gradient(to bottom, #170516 70%, #0015ff 110%);
  font-family: "poppins", sans-serif;
}

section.contacts .container {
  margin-top: 70px;
  color: white;
  display: flex;
  flex-direction: column;
}

.content {
  margin-left: 50px;
  margin-right: 50px;
}

section.contacts .container p {
  height: max-content;
  font-size: 20px;
  text-align: left;
  text-align: justify;
}

section.contacts .heading-section {
  margin-top: 0px;
  text-align: center;
}

.sosmed-icons {
  display: flex;
  flex-direction: column;
  align-items: start;
  margin-top: 50px;
  font-size: 20px;
}

.sosmed-icons a {
  padding: 0px;
  margin-bottom: 20px;
}

/* footer */
footer {
  padding: 20px;
  text-align: center;
  background: linear-gradient(to bottom, #0919cb, #0015ff);
}

footer a {
  color: white;
}

footer a:hover {
  color: #170516;
}

/* responsive breakpoint */
@media screen and (max-width: 768px) {
  nav ul {
    width: 50%;
  }

  .logo {
    width: 40%;
  }
}

@media screen and (max-width: 576px) {
  nav button {
    display: block;
    background-color: transparent;
    border: none;
    color: #fff;
  }

  nav ul {
    /* display:; */
    position: absolute;
    top: 0;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
    transform: translateY(-100%);
    background: linear-gradient(to top, #665c5c, #5a5a5a79);
    width: 100%;
    height: 100vh;
    z-index: -1;
    transition: all 0.5s;
  }

  nav ul.slide {
    transform: translateY(0%);
  }

  .logo img {
    margin-left: 5%;
  }

  nav {
    justify-content: space-between;
    width: 100%;
  }

  nav button {
    font-size: 200%;
  }

  section.hero .container {
    flex-direction: column-reverse;
  }

  section.hero .img-profile {
    /* display: none; */
    width: 60%;
  }

  section.hero .container .profile h1 {
    font-size: 30px;
    margin: 0px 0px;
    /* -webkit-text-stroke: 10px; */
  }
  section.hero .container .profile p {
    font-size: 20px;
    margin-bottom: 5px;
    /* -webkit-text-stroke: 10px; */
  }

  section.hero a {
    padding: 5px;
    font-size: 12px;
  }

  .heading-section {
    font-size: 32px;
  }

  /* about me */
  .about-me p {
    font-size: 12px;
  }

  /* skills */
  .skills .container {
    width: 100%;
    height: 100%;
    /* align-items: start; */
    justify-content: center;
  }

  .skill-list {
    align-items: start;
  }
  .skill {
    padding: 10px;
    border: 3px solid #0015ff;
  }
  .skill img {
    width: 50px;
  }

  /* projects */
  .section.projects {
    padding: 20px; /* Add padding to the section on small screens */
  }

  .carousel-item {
    margin: 20px 20px; /* Adjust margin for smaller screens */
  }

  .projects-box {
    flex-direction: column; /* Change to a column layout for projects */
    gap: 1rem;
    padding: 0px;
  }

  .project-img {
    width: 100%;
    height: auto;
  }

  .project-img img {
    width: 50%;
  }

  .project-desc {
    text-align: center;
    margin: 12px 0;
    font-size: 12px;
  }

  .project-desc h1 {
    font-size: 20px; /* Adjust font size for smaller screens */
  }

  .project-desc p {
    font-size: 12px;
  }

  .next-btn,
  .prev-btn {
    padding: 5px;
    border: none;
  }

  .view-project {
    font-size: 14px; /* Adjust font size for the "view project" button */
    padding: 3px;
  }

  /* contacts */
  section.contacts .container p {
    height: max-content;
    font-size: 12px;
    text-align: left;
    text-align: justify;
  }

  .sosmed-icons {
    font-size: 12px;
    margin-top: 20px;
  }

  section.contacts .container {
    margin-top: 100px;
  }

  /* footer */
  .footer {
    font-size: 12px;
  }
}

